backup-yacc-abstract/parser.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: stat_list

    2 stat_list: stat stat_list
    3          | stat

    4 stat: def_stat
    5     | assign_stat

    6 @1: %empty

    7 def_stat: DEF ID @1 '(' def_list ')'

    8 def_list: domain_decl ',' def_list
    9         | domain_decl

   10 @2: %empty

   11 domain_decl: ID @2 ':' domain

   12 domain: INTEGER
   13       | STRING
   14       | BOOLEAN

   15 @3: %empty

   16 assign_stat: ID @3 ASSIGN '{' tuple_list '}'

   17 tuple_list: tuple_const tuple_list
   18           | %empty

   19 tuple_const: '(' simple_const_list ')'

   20 simple_const_list: simple_const ',' simple_const_list
   21                  | simple_const

   22 simple_const: INTCONST
   23             | STRCONST
   24             | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 19
')' (41) 7 19
',' (44) 8 20
':' (58) 11
'{' (123) 16
'}' (125) 16
error (256)
DEF (258) 7
INTEGER (259) 12
STRING (260) 13
BOOLEAN (261) 14
ID (262) 7 11 16
INTCONST (263) 22
STRCONST (264) 23
BOOLCONST (265) 24
ASSIGN (266) 16
ERROR (267)


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
program (20)
    on left: 1, on right: 0
stat_list (21)
    on left: 2 3, on right: 1 2
stat (22)
    on left: 4 5, on right: 2 3
def_stat (23)
    on left: 7, on right: 4
@1 (24)
    on left: 6, on right: 7
def_list (25)
    on left: 8 9, on right: 7 8
domain_decl (26)
    on left: 11, on right: 8 9
@2 (27)
    on left: 10, on right: 11
domain (28)
    on left: 12 13 14, on right: 11
assign_stat (29)
    on left: 16, on right: 5
@3 (30)
    on left: 15, on right: 16
tuple_list (31)
    on left: 17 18, on right: 16 17
tuple_const (32)
    on left: 19, on right: 17
simple_const_list (33)
    on left: 20 21, on right: 19 20
simple_const (34)
    on left: 22 23 24, on right: 20 21


State 0

    0 $accept: . program $end

    DEF  shift, and go to state 1
    ID   shift, and go to state 2

    program      go to state 3
    stat_list    go to state 4
    stat         go to state 5
    def_stat     go to state 6
    assign_stat  go to state 7


State 1

    7 def_stat: DEF . ID @1 '(' def_list ')'

    ID  shift, and go to state 8


State 2

   16 assign_stat: ID . @3 ASSIGN '{' tuple_list '}'

    $default  reduce using rule 15 (@3)

    @3  go to state 9


State 3

    0 $accept: program . $end

    $end  shift, and go to state 10


State 4

    1 program: stat_list .

    $default  reduce using rule 1 (program)


State 5

    2 stat_list: stat . stat_list
    3          | stat .

    DEF  shift, and go to state 1
    ID   shift, and go to state 2

    $default  reduce using rule 3 (stat_list)

    stat_list    go to state 11
    stat         go to state 5
    def_stat     go to state 6
    assign_stat  go to state 7


State 6

    4 stat: def_stat .

    $default  reduce using rule 4 (stat)


State 7

    5 stat: assign_stat .

    $default  reduce using rule 5 (stat)


State 8

    7 def_stat: DEF ID . @1 '(' def_list ')'

    $default  reduce using rule 6 (@1)

    @1  go to state 12


State 9

   16 assign_stat: ID @3 . ASSIGN '{' tuple_list '}'

    ASSIGN  shift, and go to state 13


State 10

    0 $accept: program $end .

    $default  accept


State 11

    2 stat_list: stat stat_list .

    $default  reduce using rule 2 (stat_list)


State 12

    7 def_stat: DEF ID @1 . '(' def_list ')'

    '('  shift, and go to state 14


State 13

   16 assign_stat: ID @3 ASSIGN . '{' tuple_list '}'

    '{'  shift, and go to state 15


State 14

    7 def_stat: DEF ID @1 '(' . def_list ')'

    ID  shift, and go to state 16

    def_list     go to state 17
    domain_decl  go to state 18


State 15

   16 assign_stat: ID @3 ASSIGN '{' . tuple_list '}'

    '('  shift, and go to state 19

    $default  reduce using rule 18 (tuple_list)

    tuple_list   go to state 20
    tuple_const  go to state 21


State 16

   11 domain_decl: ID . @2 ':' domain

    $default  reduce using rule 10 (@2)

    @2  go to state 22


State 17

    7 def_stat: DEF ID @1 '(' def_list . ')'

    ')'  shift, and go to state 23


State 18

    8 def_list: domain_decl . ',' def_list
    9         | domain_decl .

    ','  shift, and go to state 24

    $default  reduce using rule 9 (def_list)


State 19

   19 tuple_const: '(' . simple_const_list ')'

    INTCONST   shift, and go to state 25
    STRCONST   shift, and go to state 26
    BOOLCONST  shift, and go to state 27

    simple_const_list  go to state 28
    simple_const       go to state 29


State 20

   16 assign_stat: ID @3 ASSIGN '{' tuple_list . '}'

    '}'  shift, and go to state 30


State 21

   17 tuple_list: tuple_const . tuple_list

    '('  shift, and go to state 19

    $default  reduce using rule 18 (tuple_list)

    tuple_list   go to state 31
    tuple_const  go to state 21


State 22

   11 domain_decl: ID @2 . ':' domain

    ':'  shift, and go to state 32


State 23

    7 def_stat: DEF ID @1 '(' def_list ')' .

    $default  reduce using rule 7 (def_stat)


State 24

    8 def_list: domain_decl ',' . def_list

    ID  shift, and go to state 16

    def_list     go to state 33
    domain_decl  go to state 18


State 25

   22 simple_const: INTCONST .

    $default  reduce using rule 22 (simple_const)


State 26

   23 simple_const: STRCONST .

    $default  reduce using rule 23 (simple_const)


State 27

   24 simple_const: BOOLCONST .

    $default  reduce using rule 24 (simple_const)


State 28

   19 tuple_const: '(' simple_const_list . ')'

    ')'  shift, and go to state 34


State 29

   20 simple_const_list: simple_const . ',' simple_const_list
   21                  | simple_const .

    ','  shift, and go to state 35

    $default  reduce using rule 21 (simple_const_list)


State 30

   16 assign_stat: ID @3 ASSIGN '{' tuple_list '}' .

    $default  reduce using rule 16 (assign_stat)


State 31

   17 tuple_list: tuple_const tuple_list .

    $default  reduce using rule 17 (tuple_list)


State 32

   11 domain_decl: ID @2 ':' . domain

    INTEGER  shift, and go to state 36
    STRING   shift, and go to state 37
    BOOLEAN  shift, and go to state 38

    domain  go to state 39


State 33

    8 def_list: domain_decl ',' def_list .

    $default  reduce using rule 8 (def_list)


State 34

   19 tuple_const: '(' simple_const_list ')' .

    $default  reduce using rule 19 (tuple_const)


State 35

   20 simple_const_list: simple_const ',' . simple_const_list

    INTCONST   shift, and go to state 25
    STRCONST   shift, and go to state 26
    BOOLCONST  shift, and go to state 27

    simple_const_list  go to state 40
    simple_const       go to state 29


State 36

   12 domain: INTEGER .

    $default  reduce using rule 12 (domain)


State 37

   13 domain: STRING .

    $default  reduce using rule 13 (domain)


State 38

   14 domain: BOOLEAN .

    $default  reduce using rule 14 (domain)


State 39

   11 domain_decl: ID @2 ':' domain .

    $default  reduce using rule 11 (domain_decl)


State 40

   20 simple_const_list: simple_const ',' simple_const_list .

    $default  reduce using rule 20 (simple_const_list)
